# web_modul_11

./: .env.example  .example.env  .gitignore  README.md  main.py  pyproject.toml  send-email.py  test.db  test.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 05113834b542_init.py  3f10b6074709_init.py  608b85447a69_add_user_model.py  6eabf690e2e9_add_user_model.py  9591ecaee4f4_.py  a591c9bace5b_.py  ed8494fd4f59_init.py
src/: main.py  schemas.py  send-email.py  shemas.py
src/conf/: config.py  messages.py
src/database/: config.ini  connect_db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
templates/: example_email.html
tests/: conftest.py  test_route_auth.py  test_route_contacts.py  test_unit_repository_contacts.py  test_unit_repository_users.py
