[tool.poetry]
name = "modul-11"
version = "0.1.0"
description = ""
authors = ["ortursucceeh <109922331+ortursucceeh@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "modul_11"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
